--- a/Commutative Algebra/preamble.tex
+++ b/Commutative Algebra/preamble.tex
@@ -106,7 +106,7 @@
 \newtheorem{lemma}[theorem]{Lemma}  
 \newtheorem{corollary}[theorem]{Corollary}
 \newtheorem{axiom}[theorem]{Axiom}
-
+\newtheorem{proposition}[theorem]{Proposition}
 
 % tcolorbox Setup
 \usepackage[most,many,breakable]{tcolorbox}
