--- a/Commutative Algebra/macros.tex
+++ b/Commutative Algebra/macros.tex
@@ -93,3 +93,6 @@
   (0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;%
 }
 
+
+\usepackage{tikz}
+\newcommand*{\DashedArrow}[1][]{\mathbin{\tikz [baseline=-0.25ex,-latex, dashed,#1] \draw [#1] (0pt,0.5ex) -- (1.3em,0.5ex);}}
