--- a/Commutative Algebra/macros.tex
+++ b/Commutative Algebra/macros.tex
@@ -93,6 +93,14 @@
   (0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;%
 }
 
+\def\mylongmapsto#1{%
+\begin{tikzpicture}
+\draw (0,0.5mm) -- (0,-0.5mm);
+\newlength\mylength
+\setlength{\mylength}{\widthof{#1}}
+\draw[->] (0,0) -- (1.2\mylength,0) node[above,midway] {#1};
+\end{tikzpicture}
+}
 
 \usepackage{tikz}
 \newcommand*{\DashedArrow}[1][]{\mathbin{\tikz [baseline=-0.25ex,-latex, dashed,#1] \draw [#1] (0pt,0.5ex) -- (1.3em,0.5ex);}}
